# tmux-theme-rs

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: batt_status.rs  git_status.rs  main.rs  themes.rs  tmux_details.rs  user_details.rs
