[package]
name = "tmux_theme"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
duct = "0.13.7"
git2 = "0.20.1"
libgit2-sys = "0.18.1"
nerdfonts = { git = "https://github.com/jpiccari/nerdfonts-rs.git" }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
